Incorrect Next button placement on mobiles. Fix bug with animation

--- a/css/main.css
+++ b/css/main.css
@@ -465,8 +465,8 @@
 
 .objective-progress {
     position: absolute;
-    width: 53px;
-    height: 53px;
+    width: 54px;
+    height: 54px;
     border: 3px solid #c6c2c7;
     z-index: 1;
     border-radius: 50%;
@@ -668,13 +668,6 @@
         margin-right: 15px;
     }
 
-@media (max-width: 760px) {
-    .result-btn-holder .button {
-        display: block;
-        margin: 20px auto;
-    }
-}
-
 /*#endregion question view*/
 
 /*#region not supported browser view */
@@ -843,5 +836,14 @@
     .course-action-block.intro {
         display: table-row;
         text-align: center;
+    }
+    
+    .result-btn-holder .button {
+        display: block;
+        margin: 20px auto;
+    }
+
+    .result-btn-holder .button:first-child {
+        margin-right: auto;
     }
 }
